[package]
name = "xcrdtbl"
version = "0.1.1"
authors = ["Lucas McClean <lucas@mcclean.dev>"]
edition = "2024"
description = "Experimental CRDT library"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.44"
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "chrono/serde"]
